[tool.poetry]
name = "demand-link"
version = "0.1.0"
description = ""
authors = ["Jenny Liew <liew.jenny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.13"
pytest = "^8.4.1"
aiolimiter = "^1.2.1"
aiohttp = "^3.12.13"
uvicorn = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
