[tool.poetry]
name = "demand-link"
version = "0.1.0"
description = ""
authors = ["Jenny Liew <liew.jenny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.13"
pytest = "^8.4.1"
aiolimiter = "^1.2.1"
aiohttp = "^3.12.13"
uvicorn = "^0.34.3"
pytest-asyncio = "^1.0.0"
aioresponses = "^0.7.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
